<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/user_profile_banner"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/green_gradient"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/addCache_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/addCache_title"
                android:layout_gravity="center"
                android:textColor="@color/white"
                android:textSize="28sp"
                android:shadowColor="@color/black"
                android:shadowRadius="10"
                android:layout_marginTop="20dp"
                android:fontFamily="sans-serif-black"/>


            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_gravity="center"
                app:cardUseCompatPadding="true"
                app:cardElevation="10dp"
                app:cardCornerRadius="4dp" >

                <LinearLayout
                    android:layout_width="350dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:padding="15dp"
                    android:background="@color/white"
                    android:orientation="vertical" >

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:boxBackgroundColor="@color/white"
                        android:hint="@string/addCache_name">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/add_cache_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"/>

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:boxBackgroundColor="@color/white"
                        android:hint="@string/addCache_description">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/add_cache_description"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"/>

                    </com.google.android.material.textfield.TextInputLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal" >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/addCache_localisation"
                            android:textSize="16sp"
                            android:paddingHorizontal="12dp"
                            android:paddingVertical="15dp"
                            android:layout_alignParentStart="true"/>

                        <Button
                            android:id="@+id/place_pick_btn"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="end|center_vertical"
                            android:text="@string/addCache_localisation"
                            android:layout_alignParentEnd="true" />

                    </RelativeLayout>

                    <Button
                        android:id="@+id/save_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/addCache_save"
                        android:layout_marginTop="30dp"
                        android:layout_gravity="center" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>