...
    <string name="addBadgeFragment_error">Merci de remplir tous les champs</string>
    <string name="addBadgeFragment_title">Ajout d\'un badge</string>
    <string name="addBadgeFragment_name">Titre</string>
    <string name="addBadgeFragment_description">Description</string>
    <string name="addBadgeFragment_caches">Géocaches</string>
    <string name="addBadgeFragment_select">Sélectionner</string>
    <string name="addBadgeFragment_save">Sauvegarder</string>

    <!-- AddCacheFragment -->
    <string name="addCache_title">Ajout d\'une géocache</string>
    <string name="addCache_name">Nom</string>
    <string name="addCache_description">Description</string>
    <string name="addCache_localisation">Localisation</string>
    <string name="addCache_select">Sélectionner</string>
    <string name="addCache_save">Sauvegarder</string>

    <!-- ShareFragment -->
    <string name="shareFragment_downloadTitle">Télécharger des caches/badges</string>
    <string name="shareFragment_downloadDescription">Vous pouvez entrer ici le code de téléchargement d\'un de vos amis! Celui-ci vous permettra d\'ajouter à votre carte toutes les caches de cette personne, ainsi que tout ses badges ! Génial non?</string>
...
